--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,6 @@ html {
         margin: 0 56px;
     }
     @include bp.xxl {
-        // margin: 0 112px;
         margin: 0 auto;
         max-width: calc(1440px - 224px);
     }
@@ -52,11 +51,11 @@ body {
     font-family: 'Overpass', sans-serif;
     font-weight: 400;
     font-size: 20px;
-    background: rgba(255, 252, 243, 1) url('./assets/img/bg-pattern.svg') no-repeat top left;
+    background: rgba(255, 252, 243, 1) url('./assets/img/bg-pattern.png') no-repeat top center fixed;
     color: rgba(0, 0, 0, 1);
     hyphens: auto;
     @include bp.lg {
-        font-size: 22px;        
+        font-size: 22px;
     }
 }
 
