--- a/src/app/shared/components/contact/form/form.component.scss
+++ b/src/app/shared/components/contact/form/form.component.scss
@@ -63,10 +63,17 @@ legend {
     }
 }
 
-input:autofill {
-    color: rgba(255, 252, 243, 1);
-    background-color: rgba(0, 0, 0, 1);
-    border: none;
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    -webkit-text-fill-color: rgba(255, 252, 243, 1) !important;
+    transition: background-color 5000s ease-in-out 0s;
   }
 
 fieldset:has(input:focus) {
