projects responsive design resolved

--- a/src/app/main-content/portfolio/project/project.component.html
+++ b/src/app/main-content/portfolio/project/project.component.html
@@ -1,5 +1,5 @@
 <div class="project-container project-{{project.position}}">
-    <p>{{project.date}}</p>
+    <p class="project-date">{{project.date}}</p>
     <a href="{{project.webLink}}" target="_blank">
         <div class="project-img-container">
             <img class="project-arrow-round" src="./../../../../assets/img/arrow-round.svg" id="project-{{project.id}}-arrow">
