--- a/src/app/main-content/portfolio/project/project.component.scss
+++ b/src/app/main-content/portfolio/project/project.component.scss
@@ -155,16 +155,22 @@
 .project-details-container {
     height: 450px;
     width: 100%;
-    position: relative;
+    position: relative;   
     @include bp.sm {
         height: 350px;
     }
     @include bp.xl {
-        .project-left {
-            top: 50px;
+        .project-left {            
+            margin-top: 52px;
+            margin-left: 500px;
+            opacity: 0;
+            transition: opacity 1s, margin-left 0.8s;
         }
         .project-right {
-            top: -100px;
+            margin-top: -92px;
+            margin-right: 500px;
+            opacity: 0;
+            transition: opacity 1s, margin-right 0.8s;
         }
     }
 }
@@ -178,9 +184,16 @@
     transition: opacity 1s, top 1s;
 }
 
+
+
 .appear {
     opacity: 1;
     top: 0;
+    @include bp.xl {
+        opacity: 1 !important;
+        margin-left: 0 !important;        
+        margin-right: 0 !important;
+    }
 }
 
 .absolute-left {
