arrow movement in progress

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -49,7 +49,7 @@
         <div class="image-container">
             <img src="./../../../assets/img/anita-gasteiner.jpg">
         </div>
-        <div class="arrow-container">
+        <div class="arrow-container" id="about-me-arrow">
             <img class ="arrow" src="./../../../assets/img/arrow-diagonal-left.svg">
         </div>    
     </div>
