--- a/src/app/main-content/my-skills/my-skills.component.html
+++ b/src/app/main-content/my-skills/my-skills.component.html
@@ -38,7 +38,7 @@
     </fieldset>
 
     <div class="bottom-container">
-        <div class="arrow-container">
+        <div class="arrow-container" id="my-skills-arrow">
             <img class="arrow" src="./../../../assets/img/arrow-diagonal-right.svg">
         </div>
     </div>
