--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,5 +1,6 @@
 <app-landing-page></app-landing-page>
 <app-about-me></app-about-me>
+<app-arrow-right></app-arrow-right>
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
 <!-- <app-references></app-references> -->
