arrow left component completed

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,6 +1,8 @@
 <app-landing-page></app-landing-page>
 <app-about-me></app-about-me>
-<app-arrow-right></app-arrow-right>
+<app-arrow-left></app-arrow-left>
 <app-my-skills></app-my-skills>
+<app-arrow-right></app-arrow-right>
 <app-portfolio></app-portfolio>
 <!-- <app-references></app-references> -->
+<app-arrow-left></app-arrow-left>
