--- a/src/app/main-content/my-skills/my-skills.component.html
+++ b/src/app/main-content/my-skills/my-skills.component.html
@@ -37,10 +37,10 @@
         
     </fieldset>
 
-    <div class="bottom-container">
+    <!-- <div class="bottom-container">
         <div class="arrow-container" id="my-skills-arrow">
             <img class="arrow" src="./../../../assets/img/arrow-diagonal-right.svg">
         </div>
-    </div>
+    </div> -->
 
 </div>
