--- a/src/app/main-content/my-skills/my-skills.component.scss
+++ b/src/app/main-content/my-skills/my-skills.component.scss
@@ -89,28 +89,28 @@ a {
     }
 }
 
-.bottom-container {
-    display: flex;
-    justify-content: center;
-}
+// .bottom-container {
+//     display: flex;
+//     justify-content: center;
+// }
 
-.arrow-container {
-    width: 300px;
-    height: 250px;
-    position: relative;
-    >img {
-        position: absolute;
-        top: 10px;
-        left: 50px;
-        transition: top 1s, left 1s;
-    }
-    >img:hover {
-        top: 85px;
-        left: 90px;
-    }   
-}
+// .arrow-container {
+//     width: 300px;
+//     height: 250px;
+//     position: relative;
+//     >img {
+//         position: absolute;
+//         top: 10px;
+//         left: 50px;
+//         transition: top 1s, left 1s;
+//     }
+//     >img:hover {
+//         top: 85px;
+//         left: 90px;
+//     }   
+// }
 
-.move {
-    top: 90px;
-    right: 50px;
-}
+// .move {
+//     top: 90px;
+//     right: 50px;
+// }
