arrow animations inprogress

--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -5,23 +5,23 @@
     gap: 24px;
 }
 
-.bottom-container {
-    display: flex;
-    justify-content: center;
-}
+// .bottom-container {
+//     display: flex;
+//     justify-content: center;
+// }
 
-.arrow-container {
-    width: 300px;
-    height: 250px;
-    position: relative;
-    >img {
-        position: absolute;
-        top: 10px;
-        right: 50px;
-        transition: top 1s, right 1s;
-    }
-    >img:hover {
-        top: 85px;
-        right: 100px;
-    }   
-}
+// .arrow-container {
+//     width: 300px;
+//     height: 250px;
+//     position: relative;
+//     >img {
+//         position: absolute;
+//         top: 10px;
+//         right: 50px;
+//         transition: top 1s, right 1s;
+//     }
+//     >img:hover {
+//         top: 85px;
+//         right: 100px;
+//     }   
+// }
