arrow contact component added

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -5,4 +5,4 @@
 <app-arrow-right></app-arrow-right>
 <app-portfolio></app-portfolio>
 <!-- <app-references></app-references> -->
-<app-arrow-left></app-arrow-left>
+<app-arrow-contact></app-arrow-contact>
