arrow left and arrow contact animation resolved

--- a/src/app/main-content/arrow-left/arrow-left.component.html
+++ b/src/app/main-content/arrow-left/arrow-left.component.html
@@ -1,7 +1,7 @@
 <div class="arrow-container main-width">
     <div>
         <div id="arrow-left">
-            <img class ="arrow" src="./../../../assets/img/arrow-diagonal-left.svg">
+            <img src="./../../../assets/img/arrow-diagonal-left.svg">
         </div>
     </div>    
 </div>
