--- a/src/app/main-content/arrow-right/arrow-right.component.html
+++ b/src/app/main-content/arrow-right/arrow-right.component.html
@@ -1,7 +1,7 @@
 <div class="arrow-container main-width">
-    <div id="arrow-right">
-        <div>
-            <img class ="arrow" src="./../../../assets/img/arrow-diagonal-right.svg">
+    <div>
+        <div id="arrow-right">
+            <img src="./../../../assets/img/arrow-diagonal-right.svg">
         </div>
     </div>    
 </div>
