--- a/src/app/main-content/arrow-right/arrow-right.component.scss
+++ b/src/app/main-content/arrow-right/arrow-right.component.scss
@@ -1,7 +1,6 @@
 @use './../../shared/breakpoints.scss' as bp;
 
 .arrow-container {
-    background-color: green;
     height: 260px;
     margin-bottom: 32px;
     display: flex;
@@ -15,7 +14,7 @@
         height: inherit;
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: flex-start;
         justify-content: flex-start;
         @include bp.xs-max {
             width: 80%
@@ -27,12 +26,11 @@
             width: 80%;
         }
         >div {
-            background-color: red;
             height: 112px;
             width: 112px;
             display: flex;
             align-items: flex-end;
-            justify-content: flex-start;
+            justify-content: flex-end;
             transition: translate 3s ease-in-out;
             @include bp.lg {
                 height: 142px;
@@ -52,20 +50,20 @@
 }
 
 .move {
-    translate: -70px 148px;
+    translate: 70px 148px;
     @include bp.xs-max {
-        translate: -90px 148px;
+        translate: 90px 148px;
     }
     @include bp.sm {
-        translate: -130px 148px;
+        translate: 130px 148px;
     }
     @include bp.md {
-        translate: -250px 148px;
+        translate: 250px 148px;
     }
     @include bp.lg {
-        translate: -280px 168px;
+        translate: 280px 168px;
     }
     @include bp.xl {
-        translate: -320px 168px;
+        translate: 320px 168px;
     }
 }
