--- a/src/app/main-content/arrow-left/arrow-left.component.scss
+++ b/src/app/main-content/arrow-left/arrow-left.component.scss
@@ -2,6 +2,7 @@
 
 .arrow-container {
     height: 260px;
+    margin-top: 32px;
     margin-bottom: 32px;
     display: flex;
     flex-direction: column;
