--- a/src/app/shared/components/contact/form/form.component.html
+++ b/src/app/shared/components/contact/form/form.component.html
@@ -118,7 +118,7 @@
         @if (!privacy.valid && privacy.touched && !privacy.disabled) {
             <span class="notification privacy-notification">
                 @if (this.generalService.currentLanguage == 'de') {
-                    Bitte lesen Sie die Datenschutzerklärung.
+                    Bitte lesen Sie die DS-Erklärung.
                 }
                 @if (this.generalService.currentLanguage == 'en') {
                     Please accept the privacy policy.
