--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,8 +3,7 @@
     <div class="navbar-container">
 
         <nav>
-            <div> <!-- href="./#about" -->
-                <!-- <a routerLink="" fragment="about" routerLinkActive="active" (click)="this.generalService.showNavBtnOpen()"> -->
+            <div>
                 <a class="nav-link" href="#about" (click)="this.generalService.showNavBtnOpen()">
                     @if (this.generalService.currentLanguage == 'de') {
                         Über mich
