--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -54,7 +54,7 @@ nav {
         padding: 10px;
         margin: 20px auto;
         @include bp.sm {
-            width: 312px;
+            width: 350px;
         }
         @include bp.md {
             width: 465px;
@@ -84,6 +84,7 @@ nav {
 }
 
 .bg-diagonal {
+    margin-bottom: -1px;
     height: 90px;
     background: linear-gradient(to bottom left, rgba(255, 252, 243, 0) 49%, rgba(0, 0, 0, 1) 51%);
     @include bp.lg {
