--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -11,7 +11,7 @@
 
         <div class="text-container">
             @if (this.generalService.currentLanguage == 'de') {
-                <p>Ich bin Frontend-Entwicklerin in Wien und begeistere mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen. </p>
+                <p>Ich bin Frontend-Entwicklerin in Wien und begeistere mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.</p> <!-- Dabei achte ich sehr auf Usability und Accessibility. -->
                 <p>Wenn Sie mich gerne für Ihre Projekte einsetzen möchten, kontaktieren Sie mich! Ich freue mich auf eine Position als Junior Developer.</p>
             }
             @if (this.generalService.currentLanguage == 'en') {
