--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,8 @@
 
         <nav>
             <div>
-                <a class="nav-link" href="#about" (click)="this.generalService.showNavBtnOpen()">
+                <!-- <a class="nav-link" href="#about" (click)="this.generalService.showNavBtnOpen()"> -->
+                <a class="nav-link" routerLink="" routerLinkActive="active" (click)="this.generalService.showNavBtnOpen()"> <!-- fragment="about" -->
                     @if (this.generalService.currentLanguage == 'de') {
                         Über mich
                     }
