actualized contact mail

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
     <div class="bottom-container">
-        <div class="mail">anita.gasteiner&#64;posteo.de</div>
+        <div class="mail">contact&#64;anita-gasteiner.at</div>
         <div class="scroll-container">
             <div class="arrow-container">
                 <img src="../../assets/img/arrow.svg">
