--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,7 @@ html {
     scroll-padding-top: 100px;    
     word-wrap: break-word;
     overflow-wrap: break-word;
+    min-height: 100vh;
 }
 
 .main-width {
@@ -48,6 +49,7 @@ html {
 
 body {
     margin: 0;
+    min-height: 100vh;
     font-family: 'Overpass', sans-serif;
     font-weight: 400;
     font-size: 20px;
@@ -57,6 +59,12 @@ body {
     @include bp.lg {
         font-size: 22px;
     }
+}
+
+app-root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 h1 {
